# OpenVoice-AI

./: .env.example  .gitignore  BIG_WIN_COMBO_PLAN.md  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  run_demo.sh  start.bat  start.sh  test_aec.py  test_aec2.py
backend/: .env.example  pyproject.toml  pyrightconfig.json  run_demo.sh
backend/scripts/: test_chunker_fix.py  test_sarvam.py  test_streaming_llm.py  test_vad.py
backend/src/: main.py
backend/src/agents/: session.py  state.py
backend/src/agents/specialized/: customer_care.py  order_ops.py  shopper.py
backend/src/api/: server.py  web_pipeline.py
backend/src/asr/: qwen.py  whisper.py
backend/src/audio/: denoiser.py  io.py  test_denoiser.py
backend/src/core/: interfaces.py
backend/src/llm/: client.py
backend/src/tts/: kitten.py  piper.py  sarvam_tts.py
backend/src/utils/: chunker.py  language_guard.py
backend/src/vad/: silero.py
frontend/: README.md  index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentLabel.jsx  ConnectionStatus.jsx  MicButton.jsx  ModeToggle.jsx  NoiseReductionToggle.jsx  TextInputBar.jsx  TranscriptPanel.jsx  VoiceOrb.jsx
frontend/src/config/: agents.js
frontend/src/hooks/: useAudio.js  useVoicePipeline.js  useWebRTC.js  useWebSocket.js
src/: main.py
src/agents/: session.py  state.py
src/agents/specialized/: customer_care.py  order_ops.py  shopper.py
src/asr/: whisper.py
src/audio/: io.py
src/core/: pipeline.py
src/llm/: client.py
src/models/: asr.py  llm.py  tts.py  vad.py
src/tts/: piper.py
src/utils/: chunker.py
src/vad/: silero.py
